--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasy Football Draft Assistant</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
     <style>
         :root {
             --color-bg: #111827;
@@ -18,7 +21,7 @@
             --color-accent: #3b82f6;
             --color-accent-hover: #2563eb;
             --color-danger: #ef4444;
-            
+
             --pos-qb: #ef4444;
             --pos-rb: #3b82f6;
             --pos-wr: #22c55e;
@@ -26,6 +29,7 @@
             --pos-k: #8b5cf6;
             --pos-def: #6b7280;
         }
+
         body {
             font-family: 'Inter', sans-serif;
             background-color: var(--color-bg);
@@ -35,6 +39,7 @@
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
+
         #root {
             display: flex;
             flex-direction: column;
@@ -42,6 +47,7 @@
             max-width: 1200px;
             margin: 0 auto;
         }
+
         button {
             font-family: 'Inter', sans-serif;
             border: none;
@@ -52,7 +58,7 @@
             font-weight: 500;
         }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.1.1/",
@@ -61,10 +67,12 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+    <!-- <link rel="stylesheet" href="/index.css"> -->
 </head>
+
 <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
